--- a/Code/Interactor/interactor.cachetracker.swift.liquid
+++ b/Code/Interactor/interactor.cachetracker.swift.liquid
@@ -22,7 +22,7 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
 
     func startDeliveringModelsListChanges() {
         assert(cacheTracker == nil)
-        let context: NSManagedObjectContext! = nil // TODO: Place context here
+        let context: NSManagedObjectContext! = <nil> // TODO: Place UI coredata context here, e.g. NSManagedObjectContext.mr_default(), etc...
         cacheTracker = CoreDataCacheTracker<{{ prefix }}{{ module_info.name }}ModuleDatabaseModel, {{ prefix }}{{ module_info.name }}ModuleEntityModel>(context: context)
         cacheTracker!.delegate = self
         let predicate = {{ prefix }}{{ module_info.name }}ModuleDatabaseModel.somePredicate() // or NSPredicate(block: true)
