--- a/Code/Presenter/presenter.mcflurry.complex.cachetracker.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.complex.cachetracker.swift.liquid
@@ -21,8 +21,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
     private final var state: {{ prefix }}{{ module_info.name }}PresenterState = .initial
 
     // MARK: Vars
-
-    private var embeddableModulesCache = [ String : {{ prefix }}{{ module_info.name }}EmbeddableModule ]()
+    // TODO
 
     // MARK: Life cycle
 
@@ -31,7 +30,6 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
             if interactor.isDeliveringModelsListChanges() {
                 interactor.stopDeliveringModelsListChanges()
             }
-            embeddableModulesCache.removeAll()
             // TODO
         }
         state = .deinitialized
@@ -51,7 +49,6 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
             interactor.startDeliveringModelsListChanges()
         }
         else {
-            embeddableModulesCache.removeAll()
             let initialState = interactor.initialStateOfModelsList()
             view.loadInitialModelsList(adaptModels(initialState))
         }
@@ -59,11 +56,8 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
     }
 
     // MARK: {{ prefix }}{{module_info.name}}ModuleInput
-    {% if custom_parameters.extended_configure %}
-    func configure(with config: {{ prefix }}{{ module_info.name }}ModuleConfig) {
-    {% else %}
-    func configure() {
-        {% endif -%}
+    
+    {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleConfig) {% else %}func configure() {% endif %}{
         assert(state == .initial)
         state = .ready
         // TODO
@@ -73,7 +67,6 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
 
     func modelsListDidReset(_ initialState: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]) {
         guard state == .ready else { return }
-        embeddableModulesCache.removeAll()
         view.loadInitialModelsList(adaptModels(initialState))
     }
 
@@ -88,22 +81,21 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
         var result = [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>]()
         for item in list {
             switch item.type {
-            case .insert, .update, .move:
-                var embeddableModule: {{ prefix }}{{ module_info.name }}EmbeddableModule!
-                let key = item.model!.uniqueKeyValue()
-                embeddableModule = embeddableModulesCache[key]
-                if embeddableModule == nil {
-                    embeddableModule = router.createEmbeddableModule(with: item.model!)
-                    embeddableModulesCache[key] = embeddableModule
-                }
-                let model = {{ prefix }}{{ module_info.name }}ModuleEmbeddableModel(model: item.model!, embed: embeddableModule.embed )
-                result.append(CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>(model: model, index: item.index, newIndex: item.newIndex, type: item.type))
+            // we use CacheTrackerPlainRecurrentConsumer, so we 
+            // have to associate embeddable module only for insertions
+            case .insert: 
+                let embedder = router.createEmbeddableModule(with: item.model!, lazyAllocation: false)
+                let newModel = {{ prefix }}{{ module_info.name }}ModuleEmbeddableModel(model: item.model!, embed: embedder)
+                result.append(CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>(model: newModel, index: item.index, newIndex: item.newIndex, type: item.type))
 
-            case .delete:
-                let key = item.model!.uniqueKeyValue()
-                let model = {{ prefix }}{{ module_info.name }}ModuleEmbeddableModel(model: item.model!)
-                embeddableModulesCache.removeValue(forKey: key)
-                result.append(CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>(model: nil, index: item.index, newIndex: item.newIndex, type: item.type))
+            default:
+                if let model = item.model {
+                    let newModel = {{ prefix }}{{ module_info.name }}ModuleEmbeddableModel(model: model)
+                    result.append(CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>(model: newModel, index: item.index, newIndex: item.newIndex, type: item.type))
+                }
+                else {
+                    result.append(CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>(model: nil, index: item.index, newIndex: item.newIndex, type: item.type))
+                }
             }
         }
         return result
