--- a/Code/View/view_controller.complex.collectionview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.collectionview.cachetracker.swift.liquid
@@ -5,7 +5,7 @@ import CacheTracker
 import CacheTrackerConsumer
 
 @objc({{ prefix }}{{ module_info.name }}ViewController)
-class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITableViewDataSource, UITableViewDelegate, {{ prefix }}{{module_info.name}}ViewInput {
+class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UICollectionViewDataSource, UICollectionViewDelegate, {{ prefix }}{{module_info.name}}ViewInput {
 
     // MARK: VIPER Vars
 
@@ -13,7 +13,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
 
     // MARK: Outlets
 
-    @IBOutlet weak var tableView: UITableView!
+    @IBOutlet weak var collectionView: UICollectionView!
 
     // MARK: Vars
 
@@ -23,7 +23,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
 
     override func viewDidLoad() {
         super.viewDidLoad()
-        setupTableView()
+        setupCollectioView()
         setupConsumer()
         output.viewIsReady()
     }
@@ -32,7 +32,16 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
 
     func loadInitialModelsList(_ state: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>]) {
         consumer.reset(with: state)
-        tableView?.reloadData()
+        if let collectionView = collectionView {
+            collectionView.performBatchUpdates({
+                collectionView.reloadSections(IndexSet(integer: 0))
+            }, completion:  { _ in
+                if self.consumer.numberOfItems() > 0 {
+                    collectionView.layoutIfNeeded()
+                    collectionView.scrollRectToVisible(CGRect(x: 0, y: 0, width: 1, height: 0), animated: true)
+                }
+            })
+        }
     }
 
     func applyModelsListChanges(_ changes: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>]) {
@@ -44,37 +53,33 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
     // MARK: UI Actions
     // TODO
 
-    // MARK: - UITableViewDataSource
+    // MARK: - UICollectionViewDataSource
 
-    func numberOfSections(in tableView: UITableView) -> Int {
-        return 1
-    }
-
-    func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
+    func collectionView(_ collectionView: UICollectionView, numberOfItemsInSection section: Int) -> Int {
         return consumer.numberOfItems()
     }
 
-    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
-        let cell = tableView.dequeueReusableCell(withIdentifier: "Default") as! {{ prefix }}{{ module_info.name }}ViewCell
+    func collectionView(_ collectionView: UICollectionView, cellForItemAt indexPath: IndexPath) -> UICollectionViewCell {
+        let cell = collectionView.dequeueReusableCell(withReuseIdentifier: "Default", for: indexPath) as! {{ prefix }}{{ module_info.name }}ViewCell
         let item = consumer.object(at: indexPath.row)
         cell.configure(with: item.model)
         return cell
     }
 
-    // MARK: UITableViewDelegate
+    // MARK: UICollectionViewDelegate
 
-    func tableView(_ tableView: UITableView, willDisplay cell: UITableViewCell, forRowAt indexPath: IndexPath) {
+    func collectionView(_ collectionView: UICollectionView, willDisplay cell: UICollectionViewCell, forItemAt indexPath: IndexPath) {
         let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
         let item = consumer.object(at: indexPath.row)
         cell.willDisplay(item)
     }
 
-    func tableView(_ tableView: UITableView, didEndDisplaying cell: UITableViewCell, forRowAt indexPath: IndexPath) {
+    func collectionView(_ collectionView: UICollectionView, didEndDisplaying cell: UICollectionViewCell, forItemAt indexPath: IndexPath) {
         let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
         cell.stopDisplay()
     }
 
-    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
+    func collectionView(_ collectionView: UICollectionView, didSelectItemAt indexPath: IndexPath) {
         //let item = consumer.object(at: indexPath.row)
         // TODO
     }
@@ -82,10 +87,10 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
     // MARK: Helpers
 
     private final func setupConsumer() {
-        consumer.delegate = tableView
+        consumer.delegate = collectionView
     }
 
-    private final func setupTableView() {
+    private final func setupCollectioView() {
         // TODO
     }
 
