--- a/Code/View/view_controller.complex.root_tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.root_tableview.cachetracker.swift.liquid
@@ -5,15 +5,14 @@ import CacheTracker
 import CacheTrackerConsumer
 
 @objc({{ prefix }}{{ module_info.name }}ViewController)
-class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITableViewDataSource, UITableViewDelegate, {{ prefix }}{{module_info.name}}ViewInput {
+class {{ prefix }}{{ module_info.name }}ViewController: UITableViewController, {{ prefix }}{{module_info.name}}ViewInput {
 
     // MARK: VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
 
     // MARK: Outlets
-
-    @IBOutlet weak var tableView: UITableView!
+    // TODO
 
     // MARK: Vars
 
@@ -46,15 +45,15 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
 
     // MARK: - UITableViewDataSource
 
-    func numberOfSections(in tableView: UITableView) -> Int {
+    override func numberOfSections(in tableView: UITableView) -> Int {
         return 1
     }
 
-    func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
+    override func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
         return consumer.numberOfItems()
     }
 
-    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
+    override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
         let cell = tableView.dequeueReusableCell(withIdentifier: "Default") as! {{ prefix }}{{ module_info.name }}ViewCell
         let item = consumer.object(at: indexPath.row)
         cell.configure(with: item.model)
@@ -63,18 +62,18 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
 
     // MARK: UITableViewDelegate
 
-    func tableView(_ tableView: UITableView, willDisplay cell: UITableViewCell, forRowAt indexPath: IndexPath) {
+    override func tableView(_ tableView: UITableView, willDisplay cell: UITableViewCell, forRowAt indexPath: IndexPath) {
         let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
         let item = consumer.object(at: indexPath.row)
         cell.willDisplay(item)
     }
 
-    func tableView(_ tableView: UITableView, didEndDisplaying cell: UITableViewCell, forRowAt indexPath: IndexPath) {
+    override func tableView(_ tableView: UITableView, didEndDisplaying cell: UITableViewCell, forRowAt indexPath: IndexPath) {
         let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
         cell.stopDisplay()
     }
 
-    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
+    override func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
         //let item = consumer.object(at: indexPath.row)
         // TODO
     }
@@ -82,7 +81,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
     // MARK: Helpers
 
     private final func setupConsumer() {
-        consumer.delegate = tableView
+        consumer.delegate = self
     }
 
     private final func setupTableView() {
