--- a/Code/Configurator/configurator.mcflurry.storyboard.swift.liquid
+++ b/Code/Configurator/configurator.mcflurry.storyboard.swift.liquid
@@ -6,11 +6,11 @@ import OnDeallocateX
 
 {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
 class {{ prefix }}{{ module_info.name }}ModuleConfigurator {
-{% else %}   
+{% else %}
 class {{ prefix }}{{ module_info.name }}ModuleConfigurator: NSObject, RamblerViperModuleFactoryProtocol {
 {% endif %}
 
-    func configureModuleForViewInput<UIViewController>(viewInput: UIViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) {
+    func configureModuleForViewInput<UIViewController>(viewInput: UIViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig{% endif %}) {
         if let viewController = viewInput as? {{ prefix }}{{ module_info.name }}ViewController {
             {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
             configure(viewController: viewController, with: config)
@@ -20,7 +20,7 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator: NSObject, RamblerVip
         }
     }
 
-    private func configure(viewController: {{ prefix }}{{ module_info.name }}ViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) {
+    private func configure(viewController: {{ prefix }}{{ module_info.name }}ViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig{% endif %}) {
 
         guard viewController.output == nil else { // prevent double configuration
             return
@@ -45,19 +45,18 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator: NSObject, RamblerVip
         viewController.onWillDeallocate {
             presenter.willDeinit()
         }
-        {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
-        presenter.configure(with: config)
-        {% endif %}
+
+        {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}presenter.configure(with: config){% endif %}
     }
 
-    func create({% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) -> UIViewController {
+    func create({% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig{% endif %}) -> UIViewController {
         let storyboard = UIStoryboard(name: "{{ prefix }}{{ module_info.name }}", bundle: nil)
         let viewController = storyboard.instantiateInitialViewController() as! {{ prefix }}{{ module_info.name }}ViewController
         {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
         configureModuleForViewInput(viewInput: viewController, with: config)
         {% else %}
         configureModuleForViewInput(viewInput: viewController)
-        {% endif %}    
+        {% endif %}
         return viewController
     }
 
