--- a/Code/Presenter/module_input.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/module_input.mcflurry.alert.swift.liquid
@@ -2,6 +2,6 @@
 
 protocol {{ prefix }}{{ module_info.name }}ModuleInput: class {
 
-    func configure(with config: {{ prefix }}{{ module_info.name }}ModuleConfig)
+    func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig)
 
 }
