--- a/Code/Presenter/presenter.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.alert.swift.liquid
@@ -21,7 +21,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
 
     // MARK: Vars
 
-    private final var config: {{ prefix }}{{ module_info.name }}ModuleConfig!
+    private final var config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!
     private final var dismissed = false
 
     // MARK: Life cycle
@@ -57,7 +57,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
 
     // MARK: {{ prefix }}{{module_info.name}}ModuleInput
 
-    func configure(with config: {{ prefix }}{{ module_info.name }}ModuleConfig) {
+    func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
         assert(state == .initial)
         state = .ready
         self.config = config
