--- a/Code/Presenter/presenter.mcflurry.embed.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.embed.swift.liquid
@@ -47,7 +47,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
 
     // MARK: {{ prefix }}{{module_info.name}}ModuleInput
 
-    {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleConfig) {% else %}func configure() {% endif %}{
+    {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {% else %}func configure() {% endif %}{
         assert(state == .initial)
         state = .ready
         // TODO
