--- a/Code/Router/router.mcflurry.complex.swift.liquid
+++ b/Code/Router/router.mcflurry.complex.swift.liquid
@@ -19,12 +19,12 @@ class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name 
         let factory = {{ prefix }}{{ module_info.name }}EmbeddableModuleConfigurator()
         let configurationBlock: EmbeddedModuleConfigurationBlock = { (moduleInput) -> RamblerViperModuleOutput? in
             let moduleInput = moduleInput as! {{ prefix }}{{ module_info.name }}EmbeddableModuleInput
-            moduleInput.configure()
+            {% if custom_parameters.embeddable_extended_configure %}moduleInput.configure(with: {{ prefix }}{{ module_info.name }}EmbeddableModuleInputConfig()){% else %}moduleInput.configure(){% endif %}
             return nil // or self.calleeOutput
         }
-        
+
         let nativeEmbedder = transitionHandler.createEmbeddableModule!(usingFactory: factory, configurationBlock: configurationBlock, lazyAllocation: lazyAllocation)!
-        
+
         let embedder: {{ prefix }}{{ module_info.name }}EmbeddableEmbedBlock = { containerView in
             let nativeRemover = nativeEmbedder(containerView)!
             let  remover: {{ prefix }}{{ module_info.name }}EmbeddableRemoveBlock = {
@@ -32,7 +32,7 @@ class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name 
             }
             return remover
         }
-        
+
         return embedder
     }
 
