--- a/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
+++ b/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
@@ -58,12 +58,12 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
             let factory = {{ prefix }}{{ module_info.name }}EmbeddableModuleConfigurator()
             let configurationBlock: EmbeddedModuleConfigurationBlock = { (moduleInput) -> RamblerViperModuleOutput? in
                 let moduleInput = moduleInput as! {{ prefix }}{{ module_info.name }}EmbeddableModuleInput
-                moduleInput.configure()
+                {% if custom_parameters.embeddable_extended_configure %}moduleInput.configure(with: {{ prefix }}{{ module_info.name }}EmbeddableModuleInputConfig()){% else %}moduleInput.configure(){% endif %}
                 return nil // or self.calleeOutput
             }
-            
+
             let nativeEmbedder = transitionHandler.createEmbeddableModule!(usingFactory: factory, configurationBlock: configurationBlock, lazyAllocation: lazyAllocation)!
-            
+
             let embedder: {{ prefix }}{{ module_info.name }}EmbeddableEmbedBlock = { containerView in
                 let nativeRemover = nativeEmbedder(containerView)!
                 let  remover: {{ prefix }}{{ module_info.name }}EmbeddableRemoveBlock = {
@@ -71,7 +71,7 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
                 }
                 return remover
             }
-            
+
             return embedder
         }
 
