--- a/Code/Configurator/tabbar.configurator.mcflurry.swift.liquid
+++ b/Code/Configurator/tabbar.configurator.mcflurry.swift.liquid
@@ -33,6 +33,9 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator {
         presenter.interactor = interactor
         viewController.output = presenter
 
+        router.transitionHandler = viewController
+        router.calleeOutput = presenter
+
         viewController.onWillDeallocate {
             presenter.willDeinit()
         }
