--- a/Code/Presenter/module_input.swift.liquid
+++ b/Code/Presenter/module_input.swift.liquid
@@ -3,5 +3,6 @@
 protocol {{ prefix }}{{ module_info.name }}ModuleInput: class {
 
     {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig){% else %}func configure(){% endif %}
+    func setOutput(_ output: {{ prefix }}{{ module_info.name }}ModuleOutput)
 
 }
